--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "window.title": "Seinfra -Api",
     "cSpell.words": [
         "dotenv",
-        "pydantic"
+        "pydantic",
+        "tabela"
     ]
 }
